# cgt-timeline

./: .gitignore  API_INTEGRATION.md  CLARIFICATION_FLOW.md  LOGO-SWITCHER-GUIDE.md  MODEL_RESPONSE_COMPONENTS.md  QUICK_START_MODEL_RESPONSE.md  README.md  SCENARIO_MIGRATION_SUMMARY.md  SESSION_RESTORE_IMPLEMENTATION.md  SESSION_RESTORE_PLAN.md  SETUP_API.md  STICKY_NOTES_IMPLEMENTATION_PROMPT.md  VOICE_AI_UPDATE_PLAN.md  bash.exe.stackdump  claude.md  package-lock.json  package.json  scenario-classification-report.json  scenario-classification-report.txt  scenario-metadata-improvement-report.json  scenario-metadata-improvement-report.txt  scenario-migration-report.json  scenario-migration-report.txt  scenario-titles-report.json  scenario-titles-report.txt  scenario-validation-report.json  scenario-validation-report.txt  test-date-parsing.js  timeline_debug.patch  tmpclaude-40e7-cwd
.claude/: settings.local.json
CgtBrainAI/cgt-brain-api/: .gitignore  README.md  pyproject.toml  requirements.txt
CgtBrainAI/cgt-brain-api/app/: __init__.py  claude_client.py  config.py  main.py
CgtBrainAI/cgt-brain-api/app/models/: __init__.py  portfolio_schemas.py  schemas.py
CgtBrainAI/cgt-brain-api/app/prompts/: __init__.py  system_prompt.py
CgtBrainAI/cgt-brain-api/app/routers/: __init__.py  portfolio.py
CgtBrainAI/cgt-brain-api/app/utils/: __init__.py  async_helpers.py  cost_calculator.py
CgtBrainAI/cgt-brain-api/tests/: __init__.py  test_data.py  test_integration.py
docs/: CGT_CALCULATION_ACCURACY.md  ERROR_HANDLING.md  MULTI_OWNER_PARTIAL_USAGE_PLAN.md
(+611 files in other folders)
